test/invalid/character_unfinished.d
//T error: character_unfinished.d:4:9:
//T error: Unexpected end of file

char c = '\0
